# bevy_space_program

./: .gitignore  Cargo.toml  README.md
assets/experiment_001/: command_pod.gltf  earth.glb  nav_ball.glb  torus.glb
assets/experiment_002/: inverted_xyz_ball.glb  nav_ball.glb  nav_ball_orbital.glb  nav_ring.glb
assets/misc/: NavBall.blend  NavBall.xcf  NavRing.blend  NavRing.blend1
src/: lib.rs
src/crosshair/: mod.rs
src/mipmap/: mod.rs
